[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/editor/itemwidget.gd" type="Script" id=1]

[node name="Container" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 308.0
margin/bottom = 408.0
script/script = ExtResource( 1 )

[node name="Delete button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 3.0
margin/right = 119.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete"
flat = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]

rect/min_size = Vector2( 400, 40 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 400.0
margin/bottom = 70.0
alignment = 0

[connection signal="mouse_enter" from="." to="." method="_on_Container_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_Container_mouse_exit"]

[connection signal="mouse_enter" from="Delete button" to="." method="_on_Delete_button_mouse_enter"]

[connection signal="mouse_exit" from="Delete button" to="." method="_on_Delete_button_mouse_exit"]

[connection signal="pressed" from="Delete button" to="." method="_on_Delete_button_pressed"]


